DT-2005-01-05-2: Enhancem.: o aimk now checks the Java version
                 Changed:   aimk.site

DT-2005-01-05-1: Bugfix:    o Fixed DRMAA-J PartialTimestamp bugs
                 Docs:      o Added section to DRMAA-J howto
                 Changed:   DRMAA, www

DT-2005-01-05-0: Bugfix:    o Fixed minor DRMAA-J bugs
                            o Removed JGDI flags from aimk
                            o Reduced MAX_STRING_SIZE to 2048
                            o Added DRMAA-J testsuite test
                            o Made symlink to JNI lib on MacOS X
                 Changed:   DRMAA, aimk, basis_types, job, stdlib, testsuite,
                            distinst
                 Issue:     538
                 Review:    SG, AS

HP-2005-01-04-1: Bugfix:    Fixed bug in aimk in code for Interix and Win32 
                 Changed:   aimk

HP-2005-01-04-0: Bugfix:    Improved "root" or "Administrator" detection
                            in Interix.
                 Changed:   libuti, shepherd

CR-2005-01-03-0: Testsuite: - added binary test module for issue #1389
                            and issue #1400
                            - added testsuite test for test module

JG-2005-01-03-1: Bugfix:    Fixed broken build.

JG-2005-01-03-0: Bugfix:    Fixed aimk -no-mk.

DT-2005-01-03-0: Docs       o Updated DRMAA-J howto and README
                            o Removed javadoc.clean from clean target
                 Bugfix:    o Fixed missing qtask args in qtcsh
                            - Contributed by Ron Chen
                            o Fixed colon parsing in working directory in DRMAA
                            - Contributed by Ron Chen
                 Changed:   DRMAA, www, qtcsh
                 Review:    DT
                 Issue:     1407, 1397

DT-2004-12-31-1: Bugfix:    o Really backed out conflicting changes
                            o Resolved conflict between ARCo and DRMAA
                 Changed:   aimk.site, DRMAA Makefiles
